--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.1.3"
+        "php": "^7.1.3",
+        "symfony/framework-bundle": "^4.2",
+        "symfony/validator": "^4.2",
+        "doctrine/orm": "^2.6",
+        "doctrine/doctrine-bundle": "^1.10"
     },
     "autoload": {
         "psr-4": {
