--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
         }
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "^4.2",
+        "symfony/framework-bundle": "^4.0",
+        "symfony/browser-kit": "^4.0"
     }
 }
