--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "symfony/framework-bundle": "^4.2",
         "symfony/validator": "^4.2",
         "doctrine/orm": "^2.6",
