--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "php": "^7.1.3",
         "ext-json": "*",
         "ext-pdo": "*",
-        "symfony/framework-bundle": "^4.2",
-        "symfony/validator": "^4.2",
-        "doctrine/doctrine-bundle": "^1.10"
+        "symfony/framework-bundle": "^3.4 || ^4.4",
+        "symfony/validator": "^3.4 || ^4.4",
+        "doctrine/doctrine-bundle": "^1.10 || ^1.12"
     },
     "autoload": {
         "psr-4": {
@@ -28,8 +28,8 @@
         }
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.2",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/browser-kit": "^4.0"
+        "symfony/phpunit-bridge": "^3.4 || ^4.4",
+        "symfony/framework-bundle": "^3.4 || ^4.4",
+        "symfony/browser-kit": "^3.4 || ^4.4"
     }
 }
